<resources>
    <string name="app_name">criminal_intent</string>
    <string name="title">Title</string>
    <string name="title_for_the_crime">title for the crime</string>
    <string name="details">Details</string>
    <string name="thu_june_27_18_22_2024">Thu June 27 18:22 2024</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="solved">Solved</string>
</resources>